#6 add login page

--- a/src/app/login/login-page.component.html
+++ b/src/app/login/login-page.component.html
@@ -1,2 +1,4 @@
-<div id="firebaseui-auth-container"></div>
-<div id="loader">Loading...</div>
+<div class="login_page">
+    <div class="logo">TickeToDo</div>
+    <div id="firebaseui-auth-container"></div>
+</div>
