--- a/src/app/daily/daily.page.html
+++ b/src/app/daily/daily.page.html
@@ -7,35 +7,9 @@
 </ion-header>
 
 <ion-content>
-  <ion-list lines="none">
-    <ion-list-header>
-      <ion-label>Resources</ion-label>
-    </ion-list-header>
-    <ion-item>
-      <ion-card class="todo_ticket">
-        <div class="ticket_content">
-          <ion-card-header>
-            <ion-card-subtitle>Get Started</ion-card-subtitle>
-            <ion-card-title>Welcome to Ionic</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            <p>
-              Now that your app has been created, you'll want to start building
-              out features and components. Check out some of the resources below
-              for next steps.
-            </p>
-          </ion-card-content>
-        </div>
-        <div class="ticket_action">
-          <ion-card-content>
-            <p>
-              Now that your app has been created, you'll want to start building
-              out features and components. Check out some of the resources below
-              for next steps.
-            </p>
-          </ion-card-content>
-        </div>
-      </ion-card>
-    </ion-item>
-  </ion-list>
+  <ul>
+    <li *ngFor="let todo of todos$ | async">
+      {{todo.todo}}
+    </li>
+  </ul>
 </ion-content>
