--- a/src/app/add/add.page.scss
+++ b/src/app/add/add.page.scss
@@ -1,4 +1,10 @@
-.welcome-card img {
-  max-height: 35vh;
-  overflow: hidden;
+
+.content{
+    padding:50px 0;
+    text-align:center;
+}
+
+.item {
+    width:80vw;
+    margin:auto;
 }
