--- a/src/app/add/add.page.html
+++ b/src/app/add/add.page.html
@@ -9,7 +9,7 @@
   <form [formGroup]="form">
     <ion-item class="item">
       <ion-label position="stacked">ToDo</ion-label>
-      <ion-textarea formControlName="toDo" rows="1">
+      <ion-textarea formControlName="todo" rows="1">
       </ion-textarea>
     </ion-item>
     <ion-item class="item">
