refs #1 add daily page base

--- a/src/app/setting/setting.page.html
+++ b/src/app/setting/setting.page.html
@@ -1,3 +1,11 @@
-<p>
-  setting.page works!
-</p>
+<ion-header>
+  <ion-toolbar>
+    <ion-title color="primary">
+      Setting
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content class="container" color="light">
+  Coming Soon!
+</ion-content>
