--- a/src/app/add/add.page.html
+++ b/src/app/add/add.page.html
@@ -5,7 +5,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="content">
+<ion-content class="content" color="light">
   <form [formGroup]="form">
     <ion-item class="item">
       <ion-label position="stacked">ToDo</ion-label>
