--- a/src/app/daily/daily.page.html
+++ b/src/app/daily/daily.page.html
@@ -1,15 +1,13 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
+    <ion-title color="primary">
       Today's Todo
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ul>
-    <li *ngFor="let todo of todos$ | async">
-      {{todo.todo}}
-    </li>
-  </ul>
+<ion-content class="container" color="light">
+  <div class="ticket" *ngFor="let todo of todos$ | async; trackBy: trackBy" lines="none">
+    <app-ticket [todo]="todo.todo" [isDone]="todo.isDone" [id]="todo.id"></app-ticket>
+  </div>
 </ion-content>
