--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -59,7 +59,7 @@
   --ion-color-medium-shade: #86888f;
   --ion-color-medium-tint: #a2a4ab;
 
-  --ion-color-light: #F1FAEE;
+  --ion-color-light: rgb(224, 241, 241);
   --ion-color-light-rgb: 241,250,238;
   --ion-color-light-contrast: #000000;
   --ion-color-light-contrast-rgb: 0,0,0;
