refs #1 fix style

--- a/src/app/daily/ticket/ticket.component.scss
+++ b/src/app/daily/ticket/ticket.component.scss
@@ -6,6 +6,7 @@
         background-color:white;
         min-height:50px;
         flex-grow:1;
+        width:100%;
         border-right: 1px dashed black;
         padding:5px;
     }
