--- a/src/app/daily/daily.page.html
+++ b/src/app/daily/daily.page.html
@@ -13,7 +13,31 @@
 </ion-header>
 
 <ion-content class="container" color="light">
-  <div class="ticket" *ngFor="let todo of todos$ | async; trackBy: trackBy" lines="none">
-    <app-ticket [todo]="todo.todo" [isDone]="todo.isDone" [id]="todo.id"></app-ticket>
-  </div>
+  <ion-list class="list" lines="none">
+    <ng-container *ngFor="let todo of todos$ | async; trackBy: trackBy">
+      <ion-item lines="none">
+        <app-ticket class="ticket" [todo]="todo.todo" [isDone]="todo.isDone" [id]="todo.id" [mode]="mode"
+          (updateTodo)="onUpdateTodo()"></app-ticket>
+      </ion-item>
+    </ng-container>
+  </ion-list>
 </ion-content>
+
+
+<ion-footer class="footer">
+  <div class="buttons">
+    <ion-button *ngIf="mode === 'none'" shape="round" fill="clear" size="small" expand="full"
+      (click)="changeMode('edit')">
+      <ion-icon slot="start" class="icon" name="create"></ion-icon>
+    </ion-button>
+    <ion-button *ngIf="mode === 'none'" shape="round" fill="clear" size="small" expand="full"
+      (click)="changeMode('delete')">
+      <ion-icon slot="start" class="icon" name="trash"></ion-icon>
+    </ion-button>
+    <ion-button *ngIf="mode !== 'none'" shape="round" fill="clear" size="small" expand="full"
+      (click)="changeMode('none')">
+      <ion-icon slot="start" class="icon" name="checkmark-circle-outline"></ion-icon>
+      <span id="done_label">DONE</span>
+    </ion-button>
+  </div>
+</ion-footer>
