--- a/src/app/daily/daily.page.scss
+++ b/src/app/daily/daily.page.scss
@@ -1,8 +1,50 @@
 .ticket {
-  width:92vw;
-  margin:15px auto;
+  width:100%;
 }
 
 .title{
   text-align:center;
+}
+
+.option{
+  border-radius:7px;
+}
+
+.list{
+  padding: 20px 8px 0 0;
+}
+
+.item{
+  margin-bottom:5px;
+}
+
+.footer{
+  padding:5px 0;
+  background-color:rgb(224, 241, 241);
+}
+
+.buttons{
+  width: 45vw;
+  background-color:#12c3d5;
+  height: 2.5rem;
+  position:relative;
+  padding-left:20px;
+  display:flex;
+  &:before {
+    content: "";
+    background-color:#12c3d5;
+    border-radius: 50%;
+    width:2.5rem;
+    height: 2.5rem;
+    position:absolute;
+    right: -1.2rem;
+  }
+  .icon{
+    color:white;
+    font-size: 1.8rem;
+  }
+  #done_label{
+    color:white;
+    font-size: 1.3rem;
+  }
 }
