--- a/src/app/daily/ticket/ticket.component.html
+++ b/src/app/daily/ticket/ticket.component.html
@@ -1,6 +1,8 @@
 <div class="ticket">
-  <div class="left">{{todo}}</div>
-  <div class="right" (click)="markAsDone()">
-    <ion-icon class="icon" [class.done]="isDone" name="checkmark-circle-outline"></ion-icon>
+  <div class="left" (click)="onEdit()">{{todo}}</div>
+  <div class="right" (click)="onRightClick()" [ngSwitch]="mode">
+    <ion-icon *ngSwitchCase="'none'" class="icon" [class.done]="isDone" name="checkmark-circle-outline"></ion-icon>
+    <ion-icon *ngSwitchCase="'delete'" class="icon" name="close" color="danger"></ion-icon>
+    <ion-icon *ngSwitchCase="'edit'" class="icon" name="create" color="warning"></ion-icon>
   </div>
 </div>
