refs #19 add edit form

--- a/src/app/pages/add/add.page.html
+++ b/src/app/pages/add/add.page.html
@@ -7,5 +7,5 @@
 
 <ion-content class="content" color="light">
   <app-todo-form [form]="form"></app-todo-form>
-  <ion-button color="primary" shape="round" fill="outline" (click)="onSave()">Save</ion-button>
+  <ion-button class="button" color="primary" shape="round" fill="outline" (click)="onSave()">Save</ion-button>
 </ion-content>
