--- a/src/app/pages/daily/daily.page.html
+++ b/src/app/pages/daily/daily.page.html
@@ -16,7 +16,7 @@
   <ion-list class="list" lines="none">
     <ng-container *ngFor="let todo of todos$ | async; trackBy: trackBy">
       <ion-item lines="none">
-        <app-ticket class="ticket" [todo]="todo.todo" [isDone]="todo.isDone" [id]="todo.id" [mode]="mode"
+        <app-ticket class="ticket" [todo]="todo.todo" [isDone]="todo.isDone" [id]="todo.id" [mode]="mode" [date]="date"
           (updateTodo)="onUpdateTodo()"></app-ticket>
       </ion-item>
     </ng-container>
