--- a/src/app/pages/daily/edit-dialog/edit-dialog.component.html
+++ b/src/app/pages/daily/edit-dialog/edit-dialog.component.html
@@ -1,3 +1,13 @@
-<p>
-  edit-dialog works!
-</p>
+<ion-list no-margin>
+  <ion-list-header color="dark">
+    <ion-label class="fw700">Edit Todo</ion-label>
+  </ion-list-header>
+
+  <ion-item class="item" lines="none">
+    <app-todo-form [form]="form"></app-todo-form>
+  </ion-item>
+
+  <ion-item class="item" lines="none">
+    <ion-button class="button" size="default" color="medium" shape="round" (click)="onSave()">SAVE</ion-button>
+  </ion-item>
+</ion-list>
