--- a/src/app/pages/daily/ticket/ticket.component.html
+++ b/src/app/pages/daily/ticket/ticket.component.html
@@ -1,5 +1,5 @@
 <div class="ticket">
-  <div class="left" (click)="onEdit()">{{todo}}</div>
+  <div class="left">{{todo}}</div>
   <div class="right" (click)="onRightClick()" [ngSwitch]="mode">
     <ion-icon *ngSwitchCase="'none'" class="icon" [class.done]="isDone" name="checkmark-circle-outline"></ion-icon>
     <ion-icon *ngSwitchCase="'delete'" class="icon" name="close" color="danger"></ion-icon>
