--- a/src/app/todo-form/todo-form.component.html
+++ b/src/app/todo-form/todo-form.component.html
@@ -8,4 +8,8 @@
     <ion-label position="stacked">Date</ion-label>
     <ion-datetime displayFormat="MMMM DD" formControlName="date"></ion-datetime>
   </ion-item>
+  <ion-item class="item" *ngIf="isEditMode">
+    <ion-label position="stacked">Done</ion-label>
+    <ion-checkbox formControlName="isDone"></ion-checkbox>
+  </ion-item>
 </form>
