--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,7 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+.popover-content.sc-ion-popover-ios{
+    width:80vw;
+}
