--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -5,7 +5,7 @@
       <ion-label>Add Todo</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="daily">
+    <ion-tab-button tab="daily" (click)="onClick()">
       <ion-icon name="calendar"></ion-icon>
       <ion-label>Today's Todo</ion-label>
     </ion-tab-button>
