--- a/src/app/pages/daily/daily.page.html
+++ b/src/app/pages/daily/daily.page.html
@@ -12,7 +12,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="container" color="light">
+<ion-content class="container" color="light" (swipe)="onSwipe($event)">
   <ion-list class="list" lines="none">
     <ng-container *ngFor="let todo of todos$ | async; trackBy: trackBy">
       <ion-item lines="none">
