--- a/src/app/pages/daily/ticket/ticket.component.scss
+++ b/src/app/pages/daily/ticket/ticket.component.scss
@@ -25,7 +25,7 @@
         height: 80%;
         color: rgb(0,0,0,0.3);
         &.done{
-            color: #94c0c2;
+            color: #12c3d5;
         }
     }
 }
