--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -10,6 +10,11 @@
       <ion-label>Today's Todo</ion-label>
     </ion-tab-button>
 
+    <ion-tab-button tab="list">
+      <ion-icon name="list"></ion-icon>
+      <ion-label>Todo List</ion-label>
+    </ion-tab-button>
+
     <ion-tab-button tab="setting">
       <ion-icon name="settings"></ion-icon>
       <ion-label>Settings</ion-label>
