--- a/src/app/pages/list/list-page.component.html
+++ b/src/app/pages/list/list-page.component.html
@@ -8,11 +8,24 @@
 
 <ion-content class="container" color="light">
   <ion-list class="list" lines="none">
-    <ng-container *ngFor="let todo of todos$ | async; trackBy: trackBy">
-      <ion-item lines="none">
-        <app-ticket class="ticket" [todo]="todo.todo" [isDone]="todo.isDone" [id]="todo.id" mode="none"
-          [date]="todo.date" (updateTodo)="onUpdateTodo()"></app-ticket>
-      </ion-item>
+    <ng-container *ngFor="let date of dates;  trackBy: trackByDate">
+      <ion-list-header>
+        <ion-label>{{date}}</ion-label>
+      </ion-list-header>
+      <ng-container *ngFor="let todo of temp[date]; trackBy: trackBy">
+        <ion-item lines="none">
+          <app-ticket class="ticket" [todo]="todo.todo" [isDone]="todo.isDone" [id]="todo.id" mode="none"
+            [date]="todo.date" (updateTodo)="onUpdateTodo()"></app-ticket>
+        </ion-item>
+      </ng-container>
     </ng-container>
   </ion-list>
 </ion-content>
+
+<ion-footer class="footer">
+  <div class="buttons">
+    <ion-button color="light" shape="round" fill="clear" size="small" expand="full" (click)="onJump()">
+      <ion-icon slot="start" class="icon" name="calendar"></ion-icon>
+      <span class="button">TODAY</span>
+    </ion-button>
+  </div>
