--- a/src/app/pages/list/list-page.component.scss
+++ b/src/app/pages/list/list-page.component.scss
@@ -3,5 +3,36 @@
 }
 
 .list{
-  padding: 20px 8px 0 0;
+  padding: 10px 8px 0 0;
+}
+
+.item{
+  margin-bottom:5px;
+}
+
+.footer{
+  padding:5px 0;
+  background-color:rgb(224, 241, 241);
+}
+
+.buttons{
+  width: 30vw;
+  background-color:#12c3d5;
+  height: 2.5rem;
+  position:relative;
+  padding-left:10px;
+  display:flex;
+  &:before {
+    content: "";
+    background-color:#12c3d5;
+    border-radius: 50%;
+    width:2.5rem;
+    height: 2.5rem;
+    position:absolute;
+    right: -1.2rem;
+  }
+  .button,
+  .icon{
+    color:white;
+  }
 }
