--- a/src/app/pages/setting/setting.page.html
+++ b/src/app/pages/setting/setting.page.html
@@ -7,5 +7,5 @@
 </ion-header>
 
 <ion-content class="container" color="light">
-  Coming Soon!
+  <ion-button (click)="onRefresh()">Refresh</ion-button>
 </ion-content>
